--- a/ChatboxBot.html
+++ b/ChatboxBot.html
@@ -54,7 +54,12 @@
     }
 
     #chatlog>div {
-      animation: fadeInRight .3s ease forwards, fadeOut 0.5s ease 150s forwards;
+      /*****************************************************
+      *                                                    *
+      * Change this to make the animation faster or slower *
+      *                                                    *
+      ******************************************************/
+      animation: fadeInRight .3s ease forwards, fadeOut 0.5s ease 15s forwards;
     }
 
     .colon {
@@ -90,7 +95,6 @@
     #chatlog .emote img {
       display: inline-block;
       height: 1em;
-      opacity: 0;
     }
 
     #chatlog .message,
@@ -151,10 +155,12 @@
     // Define configuration options
     const opts = {
       connection: { reconnect: true },
-      //
-      // Chnage this to whatever your channel name is
-      //
-      channels: ["your_channel_name_here"]
+      /****************************************************
+      *                                                   *
+      *       Change this to your channel name            *
+      *                                                   *
+      *****************************************************/
+      channels: ["your_channel_name"]
     };
 
     const chatlogNode = document.querySelector("#chatlog");
@@ -180,6 +186,7 @@
       function onMessageHandler(channel, context, msg, self) {
         const messageNode = template.content.cloneNode(true);
 
+        // Username
         const nameNode = messageNode.querySelector(".name");
         const displayname = context["display-name"];
         nameNode.innerHTML = displayname;
@@ -189,17 +196,27 @@
           nameNode.style.color = namecolors[displayname.charCodeAt(displayname.length - 1) % namecolors.length];
         }
 
+        // Userbadges
         const badgesNode = messageNode.querySelector(".badges");
         const badges = context["badges"];
-        for(const badge in badges){
+        for (const badge in badges) {
           const badgeImg = document.createElement("img");
           badgeImg.src = badgesDataSet.badge_sets[badge].versions[badges[badge]].image_url_1x;
-          badgeImg.className  = "badge";
+          badgeImg.className = "badge";
           badgesNode.appendChild(badgeImg);
         }
 
-        // TODO: EMOTES
-        messageNode.querySelector(".message").innerHTML = msg;
+        // Emotes
+        let msgWithEmotes = msg;
+        const emotes = context["emotes"];
+        for (const emote in emotes) {
+          const emoteImgSrc = `https://static-cdn.jtvnw.net/emoticons/v2/${emote}/default/dark/1.0`;
+          const firstEmoteOccurance = emotes[emote][0].split("-");
+          const emoteString = msg.substring(parseInt(firstEmoteOccurance[0]), parseInt(firstEmoteOccurance[1]) + 1);
+          const emoteImg = `<span class="emote"><img src="${emoteImgSrc}" alt="${emoteString}"></span>`;
+          msgWithEmotes = msgWithEmotes.replace(new RegExp(emoteString, "g"), emoteImg);
+        }
+        messageNode.querySelector(".message").innerHTML = msgWithEmotes;
 
         chatlogNode.appendChild(messageNode);
       }
