--- a/ChatboxBot.html
+++ b/ChatboxBot.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <title>Twitch-Chatbox-Bot</title>
-  <script src="https://github.com/tmijs/tmi.js/releases/download/1.7.2/tmi.min.js"></script>
+  <script src="https://github.com/tmijs/tmi.js/releases/download/v1.7.3/tmi.min.js"></script>
 
   <style>
     @import url(https://fonts.googleapis.com/css?family=Roboto:700);
