created a caching method

--- a/ChatboxBot.html
+++ b/ChatboxBot.html
@@ -41,6 +41,7 @@
   <script src="https://github.com/tmijs/tmi.js/releases/download/v1.8.5/tmi.min.js" defer></script>
   <script src="js/twitchapi.js" defer></script>
   <script src="js/tmi-emote-parse-bundle.js" defer></script>
+  <script src="js/cache.js" defer></script>
   <script src="js/chat.js" defer></script>
   <script src="js/main.js" defer></script>
 </body>
