--- a/ChatboxBot.html
+++ b/ChatboxBot.html
@@ -36,6 +36,7 @@
       <span class="message"></span>
     </div>
   </template>
+  <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" defer></script>
   <script src="js/js-yaml-bundle.js" defer></script>
   <script src="js/settings.js" defer></script>
   <script src="https://github.com/tmijs/tmi.js/releases/download/v1.8.5/tmi.min.js" defer></script>
